SM-Dev/src/objects/Seeddata_Acc_Seq_fields__c.object
<CustomObject>
    <description>FIELD to account sequence : This object accommodates the field to account sequence mapping, which is derived from the SAP seed data service. This mapping is used to identify the dependency field values in the service.</description>
    <fields>
        <fullName>AccountSequenceDescription__c</fullName>
        <description>Account Sequence Description : This field accommodates the actual sequence description which tells us where to look into for the dependent field information. This data is derived from the SAP seed data.</description>
        <label>Account Sequence Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountSequenceName__c</fullName>
        <description>Account sequence name : This field accommodates the Account sequence name, which tells us the sequence Name to look into for the required information. This values is derived from the SAP system.</description>
        <label>Account Sequence Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KEYFIELDNAME__c</fullName>
        <description>KEY FIELD NAME : This Field accommodates the Values of the field we are looking for in the mapping structure. This data is derived from the SAP seed data service.</description>
        <label>KEY FIELD NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Seeddata_Acc_Seq_Fields</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SEQF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seeddata_Acc_Seq_Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>